examples/test/testpolicy6120.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy6120
  namespace: namespace391
spec:
  podSelector:
    matchLabels:
      key49: value39
      key38: value33
      key2: value39
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key16: value31
          key6: value3
          key10: value12
      podSelector:
        matchLabels:
          key8: value35
          key22: value37
